fixed tbar and card is implemented

--- a/assets/styles/scss/base/_typography.scss
+++ b/assets/styles/scss/base/_typography.scss
@@ -32,3 +32,8 @@ section {
 .boulder {
     color: $boulder;
 }
+
+textarea:focus, input:focus, input[type]:focus, .dropdown-guest:focus {   
+    border-color: $teal;
+    outline: 0 none;
+}
