--- a/assets/styles/scss/main.scss
+++ b/assets/styles/scss/main.scss
@@ -29,7 +29,7 @@
 // @import "./vendor/bootstrap/badge";
 // @import "./vendor/bootstrap/jumbotron";
 // @import "./vendor/bootstrap/alert";
-// @import "./vendor/bootstrap/progress";
+@import "./vendor/bootstrap/progress";
 // @import "./vendor/bootstrap/media";
 // @import "./vendor/bootstrap/list-group";
 @import "./vendor/bootstrap/close";
