--- a/assets/styles/scss/pages/_index.scss
+++ b/assets/styles/scss/pages/_index.scss
@@ -34,7 +34,7 @@
             text-align: left;
             font-size: 1rem;
             a {
-                color: rgb(72,72,72);
+                color: rgb(72, 72, 72);
                 display: flex;
                 flex-direction: column;
                 span {
