--- a/assets/styles/scss/pages/_rooms.scss
+++ b/assets/styles/scss/pages/_rooms.scss
@@ -51,11 +51,18 @@ small {
         margin-bottom: 20px;
         a {
             color: $tundora;
+            @include media-breakpoint-up(md) {
+                margin-top: -40px;
+            }
         }
 
         .profile-pic-container {
             width: 48px;
             position: relative;
+            @include media-breakpoint-up(md) {
+                bottom: 30px;
+                width: 64px;
+            } 
             img {
                 width: 100%;
                 border-radius: 100px;
@@ -65,6 +72,11 @@ small {
                 position: absolute;
                 top: 25px;
                 left: 35px;
+                @include media-breakpoint-up(md) {
+                    width: 20px;
+                    top: 40px;
+                    left: 45px;
+                }
             }
             .pp-name {
                 position: absolute;
@@ -72,6 +84,8 @@ small {
                 right: 0px;
                 display: none;
                 @include media-breakpoint-up(md) {
+                    top: 70px;
+                    right: 10px;
                     display: block;
                 }
             }
@@ -151,8 +165,8 @@ small {
         }
     }
     .comment {
-        margin-top: 30px;
-        margin-bottom: 30px;
+        margin-top: 20px;
+        margin-bottom: 20px;
         position: relative;
         .comment-pp-row {
             position: relative;
