--- a/assets/styles/scss/pages/_rooms.scss
+++ b/assets/styles/scss/pages/_rooms.scss
@@ -5,6 +5,7 @@
         border: 2px solid black;
         img {
             width: 100%;
+            height: 100%;
             transition: transform .5s ease;
             &:hover {
                 transform: scale(1.1);
