--- a/assets/styles/scss/components/_card.scss
+++ b/assets/styles/scss/components/_card.scss
@@ -103,11 +103,24 @@
     .card-places {
         border: none;
         position: relative;
-        .slick-prev, .slick-next {
+        &:hover {
+            .slick-prev, .slick-next, .btn-heart {
+                opacity: 1;
+            }
+        }
+        .slick-prev, .slick-next, .btn-heart {
+            opacity: 0;
+            transition: opacity 0.5s;
             position: absolute;
+            z-index: 2;
+        }
+        .slick-prev, .slick-next {
             top: 25%;
             bottom: 25%;
-            z-index: 2;
+        }
+        .btn-heart {
+            top: 10px;
+            right: 10px;
         }
         .slick-prev {
             left: 10px;
@@ -118,11 +131,30 @@
         .slick-dots {
             position: absolute;
             bottom: 0;
-            left: 15%;
-            right: 15%;
+            left: 25%;
+            right: 25%;
             z-index: 2;
+            @include media-breakpoint-up(xl) {
+                left: 20%;
+                right: 20%;
+            }
         }
         .card-places-image-container {
+            &.slick-container {
+                height: 220px;
+                overflow: hidden;
+                @include media-breakpoint-up(xl) {
+                    max-height: 170px;
+                }
+                img {
+                    width: 100%;
+                    height: 220px;
+                    @include media-breakpoint-up(xl) {
+                        height: 170px;
+                    }
+                }
+            }
+            border-radius: 3px;
             img {
                 width: 100%;
                 border-radius: 5px;
@@ -139,7 +171,8 @@
                 text-decoration: none;
                 font-weight: 500;
                 font-size: 0.8rem;
-                padding: 0rem 0.1rem;
+                padding-left: 0.3rem;
+                padding-right: 0.1rem;
                 >span {
                     position: relative;
                     top: auto;
