--- a/assets/styles/scss/components/_card.scss
+++ b/assets/styles/scss/components/_card.scss
@@ -7,6 +7,7 @@
 }
 
 .container-card-explore {
+    flex-wrap: nowrap;
     .card-explore {
         border-radius: 10px;
         margin-right: 15px;
@@ -277,6 +278,73 @@
     }
 }
 
+.container-card-travel {
+    .slick-prev-card, .slick-next-card {
+        visibility: hidden;
+    }
+    .card-travel {
+        width: 160px;
+        margin-right: 10px;
+        margin-left: 2px;
+        .container-card-image {
+            overflow: hidden;
+            min-height: 80px;
+            img {
+                width: 100%;
+            }
+        }
+        .card-body-travel {
+            h5 {
+                font-size: 0.9rem;
+            }
+            p {
+                font-size: 0.7rem;
+            }
+        }
+    }
+
+    @include media-breakpoint-up(md) {
+        position: relative;
+        .card-travel {
+            position: relative;
+            margin-right: 20px;
+            min-width: 200px;
+            .container-card-image {
+                height: 80px;
+                width: 120px;
+            }
+            .card-body-travel {
+                position: absolute;
+                left: 120px;
+                top: 0;
+                min-height: 120px;
+                h5 {
+                    font-size: 1rem;
+                }
+                p {
+                    font-size: 0.8rem;
+                }
+            }
+        }
+        .slick-prev-card, .slick-next-card {
+            visibility: visible;
+            position: absolute;
+            top: 25%;
+            bottom: 25%;
+        }
+        .slick-prev-card {
+            left: -10px;
+            z-index: 2;
+        }
+        .slick-next-card {
+            right: 0;
+        }
+        
+    }
+
+    
+}
+
 .container-fixed-bar {
     position: fixed;
     bottom: 0;
@@ -426,10 +494,6 @@
                 position: absolute;
                 left: 120px;
                 top: 15px;
-                &.card-body-travel {
-                    height: 300px;
-                    min-width: 325px;
-                }
             }
         }
 
