--- a/assets/styles/scss/pages/_homes.scss
+++ b/assets/styles/scss/pages/_homes.scss
@@ -21,6 +21,7 @@
             padding: 25px 20px;
             min-width: 250px;
             margin-left: -20px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
             &::placeholder {
                 visibility: hidden;
                 font-weight: 900;
