--- a/assets/styles/scss/main.css
+++ b/assets/styles/scss/main.css
@@ -9892,6 +9892,8 @@ small {
   position: relative;
   color: white;
   text-align: center;
+  width: 20px;
+  margin-right: 10px;
 }
 
 .container-card-recommended .card-recommended .card-recommended-image-container img {
@@ -9903,6 +9905,7 @@ small {
 }
 
 .container-card-recommended .card-recommended .card-body-recommended {
+  max-width: 200px;
   font-size: 0.9rem;
   font-weight: 700;
   position: absolute;
